Test kommentar hinzugefügt

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head> Das ist ein Test
   <meta charset="utf-8">
   <title>360&deg; Image Gallery</title>
   <meta name="description" content="360&deg; Image Gallery - A-Frame">
